--- a/Lecture_2.ipynb
+++ b/Lecture_2.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "5                      2.99                  29.99       NC-17  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,6 +595,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.99    5652\n",
+       "4.99    5272\n",
+       "2.99    5120\n",
+       "Name: film_rental_rate, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['film_rental_rate'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -709,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +747,7 @@
        "Name: rental_gain_return, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,6 +903,37 @@
    "metadata": {},
    "source": [
     "While in average each film is rented <b>16.74</b> times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BUCKET BROTHERHOOD    34\n",
+       "ROCKETEER MOTHER      33\n",
+       "FORWARD TEMPLE        32\n",
+       "JUGGLER HARDLY        32\n",
+       "SCALAWAG DUCK         32\n",
+       "                      ..\n",
+       "MANNEQUIN WORST        5\n",
+       "BUNCH MINDS            5\n",
+       "MIXED DOORS            4\n",
+       "TRAIN BUNCH            4\n",
+       "HARDLY ROBBERS         4\n",
+       "Name: film_title, Length: 958, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['film_title'].value_counts()"
    ]
   },
   {
